# VSFI2024

ansible-k3s-master/: setup.yaml
ansible-master/: .gitignore  README.adoc  ansible.cfg  requirements.yml  setup.yaml
docker-workshop-main/: list-of-base-images.txt
docker-workshop-main/0/: Dockerfile  command.sh  index.html
docker-workshop-main/1/: Dockerfile-big  Dockerfile-small  command-big.sh  command-small.sh  main.go
docker-workshop-main/4/: command.sh  docker-compose.yml
docker-workshop-main/hacks/: command.sh
docker-workshop-main/multi-arch/: command.sh
docker-workshop-main/nexus-node-cache/: docker-compose.yaml  id_rsa_public.pub
loki-main/: README.md
observability-main/: README.md
shisha-dashboard-master/: Cargo.toml  README.adoc
shisha-dashboard-master/assets/css/: fonts.css  lineicons.css  main.css
shisha-dashboard-master/assets/js/: main.js
shisha-dashboard-master/src/: lib.rs  main.rs
shisha-dashboard-master/src/entities/: event.rs  mod.rs  prelude.rs
shisha-dashboard-master/src/messages/: mod.rs
shisha-dashboard-master/src/migrator/: m20240624_000001_create_events_table.rs  mod.rs
shisha-dashboard-master/src/service/: query.rs
shisha-dashboard-master/templates/: index.html
shisha-dashboard-master/tests/: dashboard_integration_test.rs
shisha-dashboard-master/tests/common/: mod.rs  mysql_container.rs  redpanda_container.rs
shisha-inventory-main/: .env  .gitignore  .gitlab-ci.yml  Dockerfile-client  Dockerfile-server  README.md  config.json  docker-compose.yml  nginx-client.conf  runner-values.yaml
(+61 files in other folders)
