[package]
name = "shisha-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "shisha"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.5"
axum-prometheus = "0.6.1"
sea-orm = { version = "1.0.0-rc.7", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0.0-rc.7"
rdkafka = "0.36.2"
serde = "1.0.203"
serde_json = "1.0.120"
tera = "1.20.0"
env_logger = "0.11.3"
log = "0.4.22"
chrono = "0.4.38"
anyhow = "1.0.86"
rust-embed = "8.4.0"
mime_guess = "2.0.5"
dotenvy = "0.15.7"
rust_decimal = "1.35.0"
metrics = "0.23.0"

[dev-dependencies]
testcontainers = { version = "0.19.0" }

